# xy_stdio_request_base

./: MANIFEST.in  README.md  pyproject.toml  setup.py
readme/: README.en.md  README.zh-hant.md  README_en.md  README_zh_CN.md  README_zh_TW.md
test/: client.py  server.py  stdinput.py
xy_stdio_request_base/: Base.py  ModuleData.py  Resource.py  Task.py  utils.py
xy_stdio_request_base/execute/: Main.py
