[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]

requires-python = ">=3.11.3"

name = "xy_stdio_request_base"

authors = [{ name = "余洋", email = "yuyangit.0515@qq.com" }]
description = "xy_stdio_request_base 模块"

dynamic = ["version"]

classifiers = ["Programming Language :: Python :: 3"]

dependencies = ["xy_list",]
readme = "README.md"

[tool.setuptools.packages.find]
where = ["./"]
include = ["xy_stdio_request_base"]
namespaces = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { file = "VERSION" }
